[package]
name = "ggh"
version = "0.1.0"
authors = ["Dale Wijnand <dale.wijnand@gmail.com>"]

[dependencies]
env_logger = "0.4"
error-chain = "0.10"
git2 = "0.6"
hubcaps = "0.3"
hyper = "0.10"
hyper-native-tls = "0.2"

[replace]
"hubcaps:0.3.12" = { git = "https://github.com/dwijnand/hubcaps", branch = "git-commits" }
